oasis-build/tests/ui/bad_import.stderr
error: External type `tests::NonXccType` must be defined in a service to use in an RPC interface.
  --> $DIR/bad_import.rs:11:66
   |
11 |     pub fn bad_import(&mut self, _ctx: &oasis_std::Context, arg: NonXccType) {}
   |                                                                  ^^^^^^^^^^

error: aborting due to previous error

